src/objects/ACCL__Asset_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Is_Latest_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For reporting purposes; will be set in a process</description>
        <label>Is Latest Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_Location__c</fullName>
        <label>Location</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDLZ_Product__c</fullName>
        <label>Product</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Vehicle__c</fullName>
        <label>Vehicle</label>
        <length>254</length>
        <type>Text</type>
    </fields>
</CustomObject>